[gd_scene load_steps=11 format=2]

[ext_resource path="res://Dialogue/dogicabold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scroll/vavont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Areas/FrontDoor/DialogueManager1.gd" type="Script" id=3]
[ext_resource path="res://Dialogue/chat_bubble.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 5 )

[sub_resource type="InputEventAction" id=6]
action = "continue"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="DialogueManager1" type="Node2D"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="ChatBubble" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -114.0
margin_right = 14.0
margin_bottom = -46.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="ChatBubble"]
margin_right = 28.0
margin_bottom = 46.0
theme = SubResource( 2 )
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="ChatBubble/Label"]
modulate = Color( 1, 1, 1, 0.752941 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_right = 20.0
grow_horizontal = 2
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="ChatBubble"]
margin_top = 50.0
margin_right = 28.0
margin_bottom = 68.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource( 4 )
shortcut_in_tooltip = false
shortcut = SubResource( 7 )
text = ">"

[connection signal="timeout" from="Timer" to="." method="begin_dialogue"]
[connection signal="button_up" from="ChatBubble/Button" to="." method="read_next_line"]
